--- a/table.html
+++ b/table.html
@@ -137,7 +137,7 @@
         <tr>
           <td class="nomer_eight">1</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (3).png" alt="milan" />
+            <img src="emblems/milanemb.png" alt="milan" />
           </td>
           <td class="team">Иван Беловицкий</td>
           <td class="rt">1</td>
@@ -148,7 +148,7 @@
         <tr>
           <td class="nomer_eight">2</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (2).png" alt="liverpool" />
+            <img src="emblems/liveremb.png" alt="liverpool" />
           </td>
           <td class="team">Максим Зипир</td>
           <td class="rt">1</td>
@@ -159,7 +159,7 @@
         <tr>
           <td class="nomer_eight">3</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (1).png" alt="chelsea" />
+            <img src="emblems/chelemb.png" alt="chelsea" />
           </td>
           <td class="team">Виталий Касьянов</td>
           <td class="rt">1</td>
@@ -187,7 +187,7 @@
         <tr>
           <td class="nomer_eight">1</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (2).png" alt="liverpool" />
+            <img src="emblems/liveremb.png" alt="liverpool" />
           </td>
 
           <td class="team">Максим Зипир</td>
@@ -199,7 +199,7 @@
         <tr>
           <td class="nomer_eight">2</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (3).png" alt="milan" />
+            <img src="emblems/milanemb.png" alt="milan" />
           </td>
           <td class="team">Иван Беловицкий</td>
           <td class="rt">2</td>
@@ -210,7 +210,7 @@
         <tr>
           <td class="nomer_eight">3</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (1).png" alt="chelsea" />
+            <img src="emblems/chelemb.png" alt="chelsea" />
           </td>
           <td class="team">Виталий Касьянов</td>
           <td class="rt">2</td>
@@ -237,7 +237,7 @@
         <tr>
           <td class="nomer_eight">1</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (2).png" alt="liverpool" />
+            <img src="emblems/liveremb.png" alt="liverpool" />
           </td>
 
           <td class="team">Максим Зипир</td>
@@ -249,7 +249,7 @@
         <tr>
           <td class="nomer_eight">2</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (3).png" alt="milan" />
+            <img src="emblems/milanemb.png" alt="milan" />
           </td>
           <td class="team">Иван Беловицкий</td>
           <td class="rt">3</td>
@@ -260,7 +260,7 @@
         <tr>
           <td class="nomer_eight">3</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (1).png" alt="chelsea" />
+            <img src="emblems/chelemb.png" alt="chelsea" />
           </td>
           <td class="team">Виталий Касьянов</td>
           <td class="rt">3</td>
@@ -287,7 +287,7 @@
         <tr>
           <td class="nomer_eight">1</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (2).png" alt="liverpool" />
+            <img src="emblems/liveremb.png" alt="liverpool" />
           </td>
 
           <td class="team">Максим Зипир</td>
@@ -299,7 +299,7 @@
         <tr>
           <td class="nomer_eight">2</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (3).png" alt="milan" />
+            <img src="emblems/milanemb.png" alt="milan" />
           </td>
           <td class="team">Иван Беловицкий</td>
           <td class="rt">4</td>
@@ -310,7 +310,7 @@
         <tr>
           <td class="nomer_eight">3</td>
           <td class="cl_logo">
-            <img src="emblems/pngwing.com (1).png" alt="chelsea" />
+            <img src="emblems/chelemb.png" alt="chelsea" />
           </td>
           <td class="team">Виталий Касьянов</td>
           <td class="rt">4</td>
