--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Таблица</title>
     <link
@@ -319,7 +319,6 @@
           <td class="rt1">17</td>
         </tr>
       </table>
-      
     </div>
   </body>
 </html>
