--- a/calen.html
+++ b/calen.html
@@ -131,66 +131,66 @@
           <td class="nomer_eight">1</td>
           <td>04.03/22:00</td>
           <td class="zix">РЕАЛ : АТЛЕТИКО</td>
-          <td class="result1_1first"></td>
-          <td class="result1_2first"></td>
-          <td class="result1_3first"></td>
+          <td class="result1_1first">2:0</td>
+          <td class="result1_2first">2:1</td>
+          <td class="result1_3first">3:1</td>
         </tr>
         <tr>
           <td class="nomer_eight">2</td>
           <td>04.03/22:00</td>
           <td class="zix">ПСВ : АРСЕНАЛ</td>
-          <td class="result1_1second"></td>
-          <td class="result1_2second"></td>
-          <td class="result1_3second"></td>
+          <td class="result1_1second">1:2</td>
+          <td class="result1_2second">1:2</td>
+          <td class="result1_3second">2:2</td>
         </tr>
 
         <tr>
           <td class="nomer_eight">3</td>
           <td>04.03/22.00</td>
           <td class="zix">БОРУССИЯ ДОРТМУНД : ЛИЛЛЬ</td>
-          <td class="result1_1third"></td>
-          <td class="result1_2third"></td>
-          <td class="result1_3third"></td>
+          <td class="result1_1third">2:0</td>
+          <td class="result1_2third">2:0</td>
+          <td class="result1_3third">3:1</td>
         </tr>
         <tr>
           <td class="nomer_eight">4</td>
           <td>05.03/22.00</td>
           <td class="zix">БАВАРИЯ : БАЙЕР</td>
-          <td class="result1_1fourth"></td>
-          <td class="result1_2fourth"></td>
-          <td class="result1_3fourth"></td>
+          <td class="result1_1fourth">2:1</td>
+          <td class="result1_2fourth">1:1</td>
+          <td class="result1_3fourth">3:1</td>
         </tr>
         <tr>
           <td class="nomer_eight">5</td>
           <td>05.03/22.00</td>
           <td class="zix">ПСЖ : ЛИВЕРПУЛЬ</td>
-          <td class="result1_1fifth"></td>
-          <td class="result1_2fifth"></td>
-          <td class="result1_3fifth"></td>
+          <td class="result1_1fifth">1:1</td>
+          <td class="result1_2fifth">2:1</td>
+          <td class="result1_3fifth">2:2</td>
         </tr>
         <tr>
           <td class="nomer_eight">6</td>
           <td>05.03/22.00</td>
           <td class="zix">БЕНФИКА : БАРСЕЛОНА</td>
-          <td class="result1_1sixth"></td>
-          <td class="result1_2sixth"></td>
-          <td class="result1_3sixth"></td>
+          <td class="result1_1sixth">1:2</td>
+          <td class="result1_2sixth">1:1</td>
+          <td class="result1_3sixth">1:3</td>
         </tr>
         <tr>
           <td class="nomer_eight">7</td>
           <td>06.03/19.45</td>
           <td class="zix">РЕАЛ СОСЬЕДАД : МЮ</td>
-          <td class="result1_1seventh"></td>
-          <td class="result1_2seventh"></td>
-          <td class="result1_3seventh"></td>
+          <td class="result1_1seventh">2:1</td>
+          <td class="result1_2seventh">2:1</td>
+          <td class="result1_3seventh">1:1</td>
         </tr>
         <tr>
           <td class="nomer_eight">8</td>
           <td>06.03/22.00</td>
           <td class="zix">РОМА : АТЛЕТИК</td>
-          <td class="result1_1eighth"></td>
-          <td class="result1_2eighth"></td>
-          <td class="result1_3eighth"></td>
+          <td class="result1_1eighth">1:1</td>
+          <td class="result1_2eighth">2:2</td>
+          <td class="result1_3eighth">2:1</td>
         </tr>
       </table>
     </div>
