--- a/calen.html
+++ b/calen.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>axiom</title>
-    <link rel="stylesheet" href="calen_style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
       type="image/png"
@@ -34,93 +33,26 @@
         text-align: left;
       }
     </style>
-    <!-- <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-
-      li {
-        float: left;
-      }
-
-      li:last-child {
-        border-right: none;
-      }
-
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      li a:hover:not(.active) {
-        background-color: #111;
-      }
-
-      .active {
-        background-color: #ad2520;
-      }
-    </style> -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <div class="header">
-      <h1>AXIOM</h1>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-black">
-      <div class="container">
-        <a class="navbar-brand" href="/"> </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">результаты</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="table.html"
-                >таблица</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
-                >календарь</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <header class="calend_page">
+      <div class="logo"><a href="index.html">Axiom</a></div>
+      <ul class="nav-links">
+        <li><a href="#">Главная</a></li>
+        <li><a href="index.html">Результаты</a></li>
+        <li><a href="calen.html" class="active">Календарь</a></li>
+        <li><a href="table.html">Таблица</a></li>
+      </ul>
+      <button class="nav-button">Войти</button>
+    </header>
 
     <div class="content">
-      <table class="tbs">
-        <p class="tour">5тур</p>
+      <div class="calend-container">
 
-        <tr>
+        <table>
+          <p class="tour">5тур</p>
+  
+          <tr>
             <th>№</th>
             <th>Дата/Время</th>
             <th>Матч</th>
@@ -128,73 +60,73 @@
             <th class="name">МАКСИМ ЗИПИР</th>
             <th class="name">ИВАН БЕЛОВИЦКИЙ</th>
           </tr>
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td>04.03/22:00</td>
-          <td class="zix">РЕАЛ 2:1 АТЛЕТИКО</td>
-          <td class="result1_1first">2:0</td>
-          <td class="result1_2first">2:1</td>
-          <td class="result1_3first">3:1</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td>04.03/22:00</td>
-          <td class="zix">ПСВ 1:7 АРСЕНАЛ</td>
-          <td class="result1_1second">1:2</td>
-          <td class="result1_2second">1:2</td>
-          <td class="result1_3second">2:2</td>
-        </tr>
-
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td>04.03/22.00</td>
-          <td class="zix">БОРУССИЯ ДОРТМУНД 1:1 ЛИЛЛЬ</td>
-          <td class="result1_1third">2:0</td>
-          <td class="result1_2third">2:0</td>
-          <td class="result1_3third">3:1</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">4</td>
-          <td>05.03/22.00</td>
-          <td class="zix">БАВАРИЯ : БАЙЕР</td>
-          <td class="result1_1fourth">2:1</td>
-          <td class="result1_2fourth">1:1</td>
-          <td class="result1_3fourth">3:1</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">5</td>
-          <td>05.03/22.00</td>
-          <td class="zix">ПСЖ : ЛИВЕРПУЛЬ</td>
-          <td class="result1_1fifth">1:1</td>
-          <td class="result1_2fifth">2:1</td>
-          <td class="result1_3fifth">2:2</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">6</td>
-          <td>05.03/22.00</td>
-          <td class="zix">БЕНФИКА : БАРСЕЛОНА</td>
-          <td class="result1_1sixth">1:2</td>
-          <td class="result1_2sixth">1:1</td>
-          <td class="result1_3sixth">1:3</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">7</td>
-          <td>06.03/19.45</td>
-          <td class="zix">РЕАЛ СОСЬЕДАД : МЮ</td>
-          <td class="result1_1seventh">2:1</td>
-          <td class="result1_2seventh">2:1</td>
-          <td class="result1_3seventh">1:1</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">8</td>
-          <td>06.03/22.00</td>
-          <td class="zix">РОМА : АТЛЕТИК</td>
-          <td class="result1_1eighth">1:1</td>
-          <td class="result1_2eighth">2:2</td>
-          <td class="result1_3eighth">2:1</td>
-        </tr>
-      </table>
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td>04.03/22:00</td>
+            <td class="zix">РЕАЛ 2:1 АТЛЕТИКО</td>
+            <td class="cresult1_1first">2:0</td>
+            <td class="cresult1_2first">2:1</td>
+            <td class="cresult1_3first">3:1</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td>04.03/22:00</td>
+            <td class="zix">ПСВ 1:7 АРСЕНАЛ</td>
+            <td class="cresult1_1second">1:2</td>
+            <td class="cresult1_2second">1:2</td>
+            <td class="cresult1_3second">2:2</td>
+          </tr>
+  
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td>04.03/22.00</td>
+            <td class="zix">БОРУССИЯ ДОРТМУНД 1:1 ЛИЛЛЬ</td>
+            <td class="cresult1_1third">2:0</td>
+            <td class="cresult1_2third">2:0</td>
+            <td class="cresult1_3third">3:1</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">4</td>
+            <td>05.03/22.00</td>
+            <td class="zix">БАВАРИЯ : БАЙЕР</td>
+            <td class="cresult1_1fourth">2:1</td>
+            <td class="cresult1_2fourth">1:1</td>
+            <td class="cresult1_3fourth">3:1</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">5</td>
+            <td>05.03/22.00</td>
+            <td class="zix">ПСЖ : ЛИВЕРПУЛЬ</td>
+            <td class="cresult1_1fifth">1:1</td>
+            <td class="cresult1_2fifth">2:1</td>
+            <td class="cresult1_3fifth">2:2</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">6</td>
+            <td>05.03/22.00</td>
+            <td class="zix">БЕНФИКА : БАРСЕЛОНА</td>
+            <td class="cresult1_1sixth">1:2</td>
+            <td class="cresult1_2sixth">1:1</td>
+            <td class="cresult1_3sixth">1:3</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">7</td>
+            <td>06.03/19.45</td>
+            <td class="zix">РЕАЛ СОСЬЕДАД : МЮ</td>
+            <td class="cresult1_1seventh">2:1</td>
+            <td class="cresult1_2seventh">2:1</td>
+            <td class="cresult1_3seventh">1:1</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">8</td>
+            <td>06.03/22.00</td>
+            <td class="zix">РОМА : АТЛЕТИК</td>
+            <td class="cresult1_1eighth">1:1</td>
+            <td class="cresult1_2eighth">2:2</td>
+            <td class="cresult1_3eighth">2:1</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </body>
 </html>
->>>>>>> 8d3e302 (Первый коммит)
