--- a/table.html
+++ b/table.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,343 +33,274 @@
         font-size: 16px;
       }
     </style>
-    <!-- <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
 
-      li {
-        float: left;
-      }
-
-      li:last-child {
-        border-right: none;
-      }
-
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      li a:hover:not(.active) {
-        background-color: #111;
-      }
-
-      .active {
-        background-color: #ad2520;
-      }
-    </style> -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-
-    <link rel="stylesheet" href="tablestyle.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="header">
-      <h1>AXIOM</h1>
-    </div>
+  <body class="table_page">
+    <header>
+      <div class="logo"><a href="index.html">Axiom</a></div>
+      <ul class="nav-links">
+        <li><a href="#">Главная</a></li>
+        <li><a href="index.html">Результаты</a></li>
+        <li><a href="calen.html">Календарь</a></li>
+        <li><a href="table.html" class="active">Таблица</a></li>
+      </ul>
+      <button class="nav-button">Войти</button>
+    </header>
 
-    <div class="content">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-        <div class="container">
-          <a class="navbar-brand p-0" href="/"> </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  >результаты</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="table.html"
-                  >таблица</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="calen.html"
-                  >календарь</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <table>
-        <tr class="td">
-          <td></td>
-          <td class="cl_logo"></td>
-          <td>Игрок</td>
-          <td>Т</td>
-          <td>Сч</td>
-          <td>Ис</td>
+    <div class="content_tab">
+      <div class="table-container">
 
-          <td>Очки</td>
-        </tr>
-        <tr class="tour_up">
-          <td>После 1 тура</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td class="cl_logo">
-            <img src="milanemb.png" alt="milan" />
-          </td>
-          <td class="team">Иван Беловицкий</td>
-          <td class="rt">1</td>
-          <td class="rt">1</td>
-          <td class="rt">2</td>
-          <td class="rt1">5</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td class="cl_logo">
-            <img src="liveremb.png" alt="liverpool" />
-          </td>
-          <td class="team">Максим Зипир</td>
-          <td class="rt">1</td>
-          <td class="rt">0</td>
-          <td class="rt">3</td>
-          <td class="rt1">3</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td class="cl_logo">
-            <img src="chelemb.png" alt="chelsea" />
-          </td>
-          <td class="team">Виталий Касьянов</td>
-          <td class="rt">1</td>
-          <td class="rt">0</td>
-          <td class="rt">1</td>
-          <td class="rt1">1</td>
-        </tr>
-      </table>
-
-      <table>
-        <tr class="tour_up">
-          <td>После 2 тура</td>
-        </tr>
-        <tr class="td">
-          <td></td>
-          <td class="cl_logo"></td>
-          <td>Игрок</td>
-          <td>Т</td>
-          <td>Сч</td>
-          <td>Ис</td>
-
-          <td>Очки</td>
-        </tr>
-
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td class="cl_logo">
-            <img src="liveremb.png" alt="liverpool" />
-          </td>
-
-          <td class="team">Максим Зипир</td>
-          <td class="rt">2</td>
-          <td class="rt">1</td>
-          <td class="rt">9</td>
-          <td class="rt1">12</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td class="cl_logo">
-            <img src="milanemb.png" alt="milan" />
-          </td>
-          <td class="team">Иван Беловицкий</td>
-          <td class="rt">2</td>
-          <td class="rt">1</td>
-          <td class="rt">6</td>
-          <td class="rt1">9</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td class="cl_logo">
-            <img src="chelemb.png" alt="chelsea" />
-          </td>
-          <td class="team">Виталий Касьянов</td>
-          <td class="rt">2</td>
-          <td class="rt">0</td>
-          <td class="rt">7</td>
-          <td class="rt1">7</td>
-        </tr>
-      </table>
-      <table>
-        <tr class="tour_up">
-          <td>После 3 тура</td>
-        </tr>
-        <tr class="td">
-          <td></td>
-          <td class="cl_logo"></td>
-          <td>Игрок</td>
-          <td>Т</td>
-          <td>Сч</td>
-          <td>Ис</td>
-
-          <td>Очки</td>
-        </tr>
-
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td class="cl_logo">
-            <img src="liveremb.png" alt="liverpool" />
-          </td>
-
-          <td class="team">Максим Зипир</td>
-          <td class="rt">3</td>
-          <td class="rt">1</td>
-          <td class="rt">14</td>
-          <td class="rt1">17</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td class="cl_logo">
-            <img src="milanemb.png" alt="milan" />
-          </td>
-          <td class="team">Иван Беловицкий</td>
-          <td class="rt">3</td>
-          <td class="rt">1</td>
-          <td class="rt">11</td>
-          <td class="rt1">14</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td class="cl_logo">
-            <img src="chelemb.png" alt="chelsea" />
-          </td>
-          <td class="team">Виталий Касьянов</td>
-          <td class="rt">3</td>
-          <td class="rt">0</td>
-          <td class="rt">12</td>
-          <td class="rt1">12</td>
-        </tr>
-      </table>
-      <table>
-        <tr class="tour_up">
-          <td>После 4 тура</td>
-        </tr>
-        <tr class="td">
-          <td></td>
-          <td class="cl_logo"></td>
-          <td>Игрок</td>
-          <td>Т</td>
-          <td>Сч</td>
-          <td>Ис</td>
-
-          <td>Очки</td>
-        </tr>
-
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td class="cl_logo">
-            <img src="liveremb.png" alt="liverpool" />
-          </td>
-
-          <td class="team">Максим Зипир</td>
-          <td class="rt">4</td>
-          <td class="rt">4</td>
-          <td class="rt">17</td>
-          <td class="rt1">29</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td class="cl_logo">
-            <img src="milanemb.png" alt="milan" />
-          </td>
-          <td class="team">Иван Беловицкий</td>
-          <td class="rt">4</td>
-          <td class="rt">2</td>
-          <td class="rt">14</td>
-          <td class="rt1">20</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td class="cl_logo">
-            <img src="chelemb.png" alt="chelsea" />
-          </td>
-          <td class="team">Виталий Касьянов</td>
-          <td class="rt">4</td>
-          <td class="rt">0</td>
-          <td class="rt">17</td>
-          <td class="rt1">17</td>
-        </tr>
-      </table>
-      <table>
-        <tr class="tour_up">
-          <td>После 5 тура</td>
-        </tr>
-        <tr class="td">
-          <td></td>
-          <td class="cl_logo"></td>
-          <td>Игрок</td>
-          <td>Т</td>
-          <td>Сч</td>
-          <td>Ис</td>
-
-          <td>Очки</td>
-        </tr>
-
-        <tr>
-          <td class="nomer_eight">1</td>
-          <td class="cl_logo">
-            <img src="liveremb.png" alt="liverpool" />
-          </td>
-
-          <td class="team">Максим Зипир</td>
-          <td class="rt">5</td>
-          <td class="rt">5</td>
-          <td class="rt">18</td>
-          <td class="rt1">33</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">2</td>
-          <td class="cl_logo">
-            <img src="milanemb.png" alt="milan" />
-          </td>
-          <td class="team">Иван Беловицкий</td>
-          <td class="rt">5</td>
-          <td class="rt">2</td>
-          <td class="rt">15</td>
-          <td class="rt1">21</td>
-        </tr>
-        <tr>
-          <td class="nomer_eight">3</td>
-          <td class="cl_logo">
-            <img src="chelemb.png" alt="chelsea" />
-          </td>
-          <td class="team">Виталий Касьянов</td>
-          <td class="rt">5</td>
-          <td class="rt">0</td>
-          <td class="rt">19</td>
-          <td class="rt1">19</td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <th></th>
+            <th class="cl_logo"></th>
+            <th>Игрок</th>
+            <th>Т</th>
+            <th>Сч</th>
+            <th>Ис</th>
+  
+            <td>Очки</td>
+          </tr>
+          <tr class="tour_up">
+            <td>После 1 тура</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td class="cl_logo">
+              <img src="milanemb.png" alt="milan" />
+            </td>
+            <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
+            <td class="rt">1</td>
+            <td class="rt">1</td>
+            <td class="rt">2</td>
+            <td class="rt1">5</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td class="cl_logo">
+              <img src="liveremb.png" alt="liverpool" />
+            </td>
+            <td class="team">МАКСИМ ЗИПИР</td>
+            <td class="rt">1</td>
+            <td class="rt">0</td>
+            <td class="rt">3</td>
+            <td class="rt1">3</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td class="cl_logo">
+              <img src="chelemb.png" alt="chelsea" />
+            </td>
+            <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
+            <td class="rt">1</td>
+            <td class="rt">0</td>
+            <td class="rt">1</td>
+            <td class="rt1">1</td>
+          </tr>
+        </table>
+  
+        <table>
+          <tr class="tour_up">
+            <td>После 2 тура</td>
+          </tr>
+          <tr class="td">
+            <td></td>
+            <td class="cl_logo"></td>
+            <td>Игрок</td>
+            <td>Т</td>
+            <td>Сч</td>
+            <td>Ис</td>
+  
+            <td>Очки</td>
+          </tr>
+  
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td class="cl_logo">
+              <img src="liveremb.png" alt="liverpool" />
+            </td>
+  
+            <td class="team">МАКСИМ ЗИПИР</td>
+            <td class="rt">2</td>
+            <td class="rt">1</td>
+            <td class="rt">9</td>
+            <td class="rt1">12</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td class="cl_logo">
+              <img src="milanemb.png" alt="milan" />
+            </td>
+            <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
+            <td class="rt">2</td>
+            <td class="rt">1</td>
+            <td class="rt">6</td>
+            <td class="rt1">9</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td class="cl_logo">
+              <img src="chelemb.png" alt="chelsea" />
+            </td>
+            <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
+            <td class="rt">2</td>
+            <td class="rt">0</td>
+            <td class="rt">7</td>
+            <td class="rt1">7</td>
+          </tr>
+        </table>
+        <table>
+          <tr class="tour_up">
+            <td>После 3 тура</td>
+          </tr>
+          <tr class="td">
+            <td></td>
+            <td class="cl_logo"></td>
+            <td>Игрок</td>
+            <td>Т</td>
+            <td>Сч</td>
+            <td>Ис</td>
+  
+            <td>Очки</td>
+          </tr>
+  
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td class="cl_logo">
+              <img src="liveremb.png" alt="liverpool" />
+            </td>
+  
+            <td class="team">МАКСИМ ЗИПИР</td>
+            <td class="rt">3</td>
+            <td class="rt">1</td>
+            <td class="rt">14</td>
+            <td class="rt1">17</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td class="cl_logo">
+              <img src="milanemb.png" alt="milan" />
+            </td>
+            <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
+            <td class="rt">3</td>
+            <td class="rt">1</td>
+            <td class="rt">11</td>
+            <td class="rt1">14</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td class="cl_logo">
+              <img src="chelemb.png" alt="chelsea" />
+            </td>
+            <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
+            <td class="rt">3</td>
+            <td class="rt">0</td>
+            <td class="rt">12</td>
+            <td class="rt1">12</td>
+          </tr>
+        </table>
+        <table>
+          <tr class="tour_up">
+            <td>После 4 тура</td>
+          </tr>
+          <tr class="td">
+            <td></td>
+            <td class="cl_logo"></td>
+            <td>Игрок</td>
+            <td>Т</td>
+            <td>Сч</td>
+            <td>Ис</td>
+  
+            <td>Очки</td>
+          </tr>
+  
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td class="cl_logo">
+              <img src="liveremb.png" alt="liverpool" />
+            </td>
+  
+            <td class="team">МАКСИМ ЗИПИР</td>
+            <td class="rt">4</td>
+            <td class="rt">4</td>
+            <td class="rt">17</td>
+            <td class="rt1">29</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td class="cl_logo">
+              <img src="milanemb.png" alt="milan" />
+            </td>
+            <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
+            <td class="rt">4</td>
+            <td class="rt">2</td>
+            <td class="rt">14</td>
+            <td class="rt1">20</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td class="cl_logo">
+              <img src="chelemb.png" alt="chelsea" />
+            </td>
+            <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
+            <td class="rt">4</td>
+            <td class="rt">0</td>
+            <td class="rt">17</td>
+            <td class="rt1">17</td>
+          </tr>
+        </table>
+        <table>
+          <tr class="tour_up">
+            <td>После 5 тура</td>
+          </tr>
+          <tr class="td">
+            <td></td>
+            <td class="cl_logo"></td>
+            <td>Игрок</td>
+            <td>Т</td>
+            <td>Сч</td>
+            <td>Ис</td>
+  
+            <td>Очки</td>
+          </tr>
+  
+          <tr>
+            <td class="nomer_eight">1</td>
+            <td class="cl_logo">
+              <img src="liveremb.png" alt="liverpool" />
+            </td>
+  
+            <td class="team">МАКСИМ ЗИПИР</td>
+            <td class="rt">5</td>
+            <td class="rt">5</td>
+            <td class="rt">18</td>
+            <td class="rt1">33</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">2</td>
+            <td class="cl_logo">
+              <img src="milanemb.png" alt="milan" />
+            </td>
+            <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
+            <td class="rt">5</td>
+            <td class="rt">2</td>
+            <td class="rt">15</td>
+            <td class="rt1">21</td>
+          </tr>
+          <tr>
+            <td class="nomer_eight">3</td>
+            <td class="cl_logo">
+              <img src="chelemb.png" alt="chelsea" />
+            </td>
+            <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
+            <td class="rt">5</td>
+            <td class="rt">0</td>
+            <td class="rt">19</td>
+            <td class="rt1">19</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </body>
 </html>
->>>>>>> 8d3e302 (Первый коммит)
