Добавил изменения в главной

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>axiom</title>
+    <title>Результаты</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
@@ -39,7 +39,7 @@
       <div class="logo"><a href="index.html">Axiom</a></div>
       
       <ul class="nav-links">
-        <li><a href="#">Главная</a></li>
+        <li><a href="home.html">Главная</a></li>
         <li><a href="index.html" class="active">Результаты</a></li>
         <li><a href="calen.html">Календарь</a></li>
         <li><a href="table.html">Таблица</a></li>
@@ -353,5 +353,8 @@
         </tr>
       </table>
     </div>
+    <footer class="footer">
+      <p>&copy; 2025 AXIOM. Все права защищены.</p>
+  </footer>
   </body>
 </html>
