--- a/table.html
+++ b/table.html
@@ -40,7 +40,7 @@
     <header>
       <div class="logo"><a href="index.html">Axiom</a></div>
       <ul class="nav-links">
-        <li><a href="#">Главная</a></li>
+        <li><a href="home.html">Главная</a></li>
         <li><a href="index.html">Результаты</a></li>
         <li><a href="calen.html">Календарь</a></li>
         <li><a href="table.html" class="active">Таблица</a></li>
@@ -285,8 +285,8 @@
             <td class="team">ИВАН БЕЛОВИЦКИЙ</td>
             <td class="rt">5</td>
             <td class="rt">2</td>
-            <td class="rt">15</td>
-            <td class="rt1">21</td>
+            <td class="rt">17</td>
+            <td class="rt1">23</td>
           </tr>
           <tr>
             <td class="nomer_eight">3</td>
@@ -296,11 +296,14 @@
             <td class="team">ВИТАЛИЙ КАСЬЯНОВ</td>
             <td class="rt">5</td>
             <td class="rt">0</td>
-            <td class="rt">19</td>
-            <td class="rt1">19</td>
+            <td class="rt">21</td>
+            <td class="rt1">21</td>
           </tr>
         </table>
       </div>
     </div>
+    <footer class="footer">
+      <p>&copy; 2025 AXIOM. Все права защищены.</p>
+  </footer>
   </body>
 </html>
