--- a/calen.html
+++ b/calen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>axiom</title>
+    <title>Календарь</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
@@ -38,7 +38,7 @@
     <header class="calend_page">
       <div class="logo"><a href="index.html">Axiom</a></div>
       <ul class="nav-links">
-        <li><a href="#">Главная</a></li>
+        <li><a href="home.html">Главная</a></li>
         <li><a href="index.html">Результаты</a></li>
         <li><a href="calen.html" class="active">Календарь</a></li>
         <li><a href="table.html">Таблица</a></li>
@@ -88,7 +88,7 @@
           <tr>
             <td class="nomer_eight">4</td>
             <td>05.03/22.00</td>
-            <td class="zix">БАВАРИЯ : БАЙЕР</td>
+            <td class="zix">БАВАРИЯ 3:0 БАЙЕР</td>
             <td class="cresult1_1fourth">2:1</td>
             <td class="cresult1_2fourth">1:1</td>
             <td class="cresult1_3fourth">3:1</td>
@@ -96,7 +96,7 @@
           <tr>
             <td class="nomer_eight">5</td>
             <td>05.03/22.00</td>
-            <td class="zix">ПСЖ : ЛИВЕРПУЛЬ</td>
+            <td class="zix">ПСЖ 0:1 ЛИВЕРПУЛЬ</td>
             <td class="cresult1_1fifth">1:1</td>
             <td class="cresult1_2fifth">2:1</td>
             <td class="cresult1_3fifth">2:2</td>
@@ -104,7 +104,7 @@
           <tr>
             <td class="nomer_eight">6</td>
             <td>05.03/22.00</td>
-            <td class="zix">БЕНФИКА : БАРСЕЛОНА</td>
+            <td class="zix">БЕНФИКА 0:1 БАРСЕЛОНА</td>
             <td class="cresult1_1sixth">1:2</td>
             <td class="cresult1_2sixth">1:1</td>
             <td class="cresult1_3sixth">1:3</td>
@@ -128,5 +128,8 @@
         </table>
       </div>
     </div>
+    <footer class="footer">
+      <p>&copy; 2025 AXIOM. Все права защищены.</p>
+  </footer>
   </body>
 </html>
