--- a/calen.html
+++ b/calen.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <header class="calend_page">
-      <div class="logo"><a href="index.html">Axiom</a></div>
+      <div class="logo"><a href="home.html">Axiom</a></div>
       <ul class="nav-links">
         <li><a href="home.html">Главная</a></li>
         <li><a href="index.html">Результаты</a></li>
