--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body class="index_page">
     <header>
-      <div class="logo"><a href="index.html">Axiom</a></div>
+      <div class="logo"><a href="home.html">Axiom</a></div>
       
       <ul class="nav-links">
         <li><a href="home.html">Главная</a></li>
