--- a/table.html
+++ b/table.html
@@ -38,7 +38,7 @@
   </head>
   <body class="table_page">
     <header>
-      <div class="logo"><a href="index.html">Axiom</a></div>
+      <div class="logo"><a href="home.html">Axiom</a></div>
       <ul class="nav-links">
         <li><a href="home.html">Главная</a></li>
         <li><a href="index.html">Результаты</a></li>
