--- a/calen.html
+++ b/calen.html
@@ -36,10 +36,10 @@
   </head>
   <body>
     <header class="calend_page">
-      <div class="logo"><a href="home.html">Axiom</a></div>
+      <div class="logo"><a href="index.html">Axiom</a></div>
       <ul class="nav-links">
-        <li><a href="home.html">Главная</a></li>
-        <li><a href="index.html">Результаты</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="result.html">Результаты</a></li>
         <li><a href="calen.html" class="active">Календарь</a></li>
         <li><a href="table.html">Таблица</a></li>
       </ul>
