--- a/table.html
+++ b/table.html
@@ -38,10 +38,10 @@
   </head>
   <body class="table_page">
     <header>
-      <div class="logo"><a href="home.html">Axiom</a></div>
+      <div class="logo"><a href="index.html">Axiom</a></div>
       <ul class="nav-links">
-        <li><a href="home.html">Главная</a></li>
-        <li><a href="index.html">Результаты</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="result.html">Результаты</a></li>
         <li><a href="calen.html">Календарь</a></li>
         <li><a href="table.html" class="active">Таблица</a></li>
       </ul>
