--- a/result.html
+++ b/result.html
@@ -39,7 +39,7 @@
       <div class="logo"><a href="index.html">Axiom</a></div>
       
       <ul class="nav-links">
-        <li><a href="home.html">Главная</a></li>
+        <li><a href="index.html">Главная</a></li>
         <li><a href="result.html" class="active">Результаты</a></li>
         <li><a href="calen.html">Календарь</a></li>
         <li><a href="table.html">Таблица</a></li>
