--- a/calen.html
+++ b/calen.html
@@ -112,7 +112,7 @@
           <tr>
             <td class="nomer_eight">7</td>
             <td>06.03/19.45</td>
-            <td class="zix">РЕАЛ СОСЬЕДАД : МЮ</td>
+            <td class="zix">РЕАЛ СОСЬЕДАД 1:1 МЮ</td>
             <td class="cresult1_1seventh">2:1</td>
             <td class="cresult1_2seventh">2:1</td>
             <td class="cresult1_3seventh">1:1</td>
@@ -120,7 +120,7 @@
           <tr>
             <td class="nomer_eight">8</td>
             <td>06.03/22.00</td>
-            <td class="zix">РОМА : АТЛЕТИК</td>
+            <td class="zix">РОМА 2:1 АТЛЕТИК</td>
             <td class="cresult1_1eighth">1:1</td>
             <td class="cresult1_2eighth">2:2</td>
             <td class="cresult1_3eighth">2:1</td>
